snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1.pom.sha256
c3eef7562282768674ab220dddfbc2ae16ae7abdc28e06d982d4916455c93cf8